package llql_proto;
option java_package = "com.vitessedata.llql.llql_proto";
option java_outer_classname = "LLQLData";

import "ns.proto";

message DataType {
    enum BuiltinType {
        BOOLEAN             = 1;

        INT8                = 10;
        INT16               = 11;
        INT32               = 12;
        INT64               = 13;
        INT128              = 14;

        FLOAT32             = 20;
        FLOAT64             = 21;

        NUMERIC             = 30;
        DECIMAL64           = 31;
        DECIMAL128          = 32;

        DATE                = 40;
        TIME                = 41;
        TIMESTAMP           = 42;

        BINARY              = 50;
        STRING              = 51;
        JSON                = 52;
        
        ARRAY               = 100;
        SET                 = 101;
    }
    
	message TypeInfo {
		required Namespace ns = 1;
		required int32 type_id = 2;
		required int32 len = 3;
        required int32 align = 4;
		optional int32 opt1 = 5;
		optional int32 opt2 = 6;
	}

	required TypeInfo type_info = 1;
    optional TypeInfo type_info_native = 2;
	repeated DataType elem_types = 3; 
}

message Schema {
	message Col {
		required DataType col_type = 1;
        required bool nullable = 2 [default = true];
        optional string name = 3;
	}
	repeated Col columns = 1;
}


